<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/box_2"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:textSize="22sp"
                android:layout_margin="10dp"
                android:text="@string/logo"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#C8215A"
                android:fontFamily="@font/masque"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/logo"/>

            <EditText
                android:id="@+id/log_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:padding="10dp"
                android:textSize="18sp"
                android:background="@drawable/box_3"
                android:layout_margin="10dp"
                />

            <EditText
                android:id="@+id/log_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:padding="10dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:background="@drawable/box_3"
                android:layout_margin="10dp"
                />


            <Button
                android:onClick="logClick"
                android:id="@+id/log_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20dp"
                android:padding="13dp"
                android:background="@drawable/box_6"/>

            <Button
                android:onClick="logClick"
                android:id="@+id/log_reg"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#C8215A"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="13dp"
                android:background="@drawable/gradient_light"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>