<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="23sp"
        android:text="Wecome Back"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textColor="#C8215A"
        android:drawableRight="@drawable/staff"
        android:fontFamily="@font/timesbi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:fontFamily="@font/times"
        android:padding="5dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lp2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/password"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textColor="#000"
                android:layout_marginHorizontal="10dp"
                />
            <EditText
                android:background="#C3ECF0F1"
                android:id="@+id/prof_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:inputType="textPassword"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/lp3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/conform_pasword"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textColor="#000"

                android:layout_marginHorizontal="10dp"
                />
            <EditText
                android:background="#C3ECF0F1"
                android:id="@+id/prof_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:inputType="textPassword"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/lp4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/pername"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textColor="#000"

                android:layout_marginHorizontal="10dp"
                />
            <EditText
                android:background="#C3ECF0F1"
                android:id="@+id/prof_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"

                />

            <TextView
                android:id="@+id/lp7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/email"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textColor="#000"

                android:layout_marginHorizontal="10dp"
                />
            <EditText
                android:background="#C3ECF0F1"
                android:id="@+id/prof_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:id="@+id/lp8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/phone"
                android:paddingHorizontal="5dp"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textColor="#000"

                android:layout_marginHorizontal="10dp"
                />
            <EditText
                android:background="#C3ECF0F1"
                android:id="@+id/prof_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:inputType="numberDecimal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                >
                <Button
                    android:onClick="editOnclick"
                    android:id="@+id/prof_update"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:background="@drawable/box_1"
                    android:layout_marginHorizontal="10dp"/>
                <Button
                    android:onClick="editOnclick"
                    android:id="@+id/prof_cancel"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18dp"
                    android:padding="10dp"
                    android:background="@drawable/box_5"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>