<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentDetails"
    android:orientation="vertical"
    android:background="@drawable/box_2"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="2dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="23sp"
            android:text="@string/the_delivered_order_details"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:drawableRight="@drawable/payment"
            android:textColor="#C8215A"
            android:fontFamily="@font/timesbi"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/customer"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/or_customer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:textColor="#000"

                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/order_time"
                    android:textColor="#000"
                    android:textStyle="bold"

                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/or_date"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#393838"
                    android:textSize="18dp"
                    android:text="30/06/2023 16:44"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/deliver_time"
                    android:textColor="#000"
                    android:textStyle="bold"

                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/del_date"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#393838"
                    android:textSize="18dp"
                    android:text="30/06/2023 16:44"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:textStyle="bold"

                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/or_total"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="18dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3F2F2"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="#C8215A"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="@string/added_items"/>

            </LinearLayout>

            <TableLayout
                android:id="@+id/items_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >


                <TableRow
                    android:layout_width="match_parent"
                    android:background="#FAECF1"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:padding="20dp"
                        android:textSize="18dp"
                        android:text="Orange Juice"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:padding="20dp"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="5 SA"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>


