<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffPage"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/box_2"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|top"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="23sp"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="#C8215A"
                android:drawableRight="@drawable/deliv"
                android:fontFamily="@font/timesbi"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">
                <Button
                    android:id="@+id/orders"
                    android:layout_marginHorizontal="5dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/view_orders"
                    android:textSize="22sp"
                    android:fontFamily="@font/timesbi"
                    android:drawableLeft="@drawable/orders"
                    android:textColor="#000"
                    android:layout_marginVertical="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/box_3"
                    android:textAlignment="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/history"
                    android:layout_marginHorizontal="5dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/delivery_history"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:fontFamily="@font/timesbi"
                    android:drawableLeft="@drawable/delivery"
                    android:textColor="#000"
                    android:layout_marginVertical="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/box_3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <Button
                    android:id="@+id/profile"
                    android:layout_marginHorizontal="5dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:fontFamily="@font/timesbi"
                    android:drawableLeft="@drawable/prof"
                    android:textColor="#000"
                    android:layout_marginVertical="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/box_3"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>