<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetails"
    android:orientation="vertical"
    android:background="@drawable/box_2"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="23sp"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textColor="#C8215A"
        android:drawableRight="@drawable/staff"
        android:fontFamily="@font/timesbi"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CF1C5E"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="22dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_restaurant_menu_24"
                android:text="Product Title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:padding="5dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_p"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:text="50 SR"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:padding="5dp"
                    android:id="@+id/item_i"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    android:src="@drawable/menu_item"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/item_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#353535"
                    android:textSize="18dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/lin1"
                    android:background="@drawable/gradient_light"

                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/quantity"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="18dp" />

                    <Spinner
                        android:id="@+id/item_q"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:padding="10dp"
                        android:textColor="#000"
                        android:entries="@array/rating"

                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">
                    <Button
                        android:visibility="gone"
                        android:id="@+id/edit_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Edit"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textSize="18dp"
                        android:background="@drawable/box_7"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/ic_baseline_restaurant_menu_24"
                        android:layout_marginHorizontal="5dp"
                        />
                    <Button
                        android:id="@+id/order_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order"
                        android:layout_marginHorizontal="5dp"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textSize="18dp"
                        android:background="@drawable/box_6"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/ic_baseline_restaurant_menu_24"
                        />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>


